--- a/setup.cfg
+++ b/setup.cfg
@@ -1,9 +1,9 @@
 [metadata]
-name = emailer
+name = futuremail
 version = 0.1.0
 
 [options]
-packages = emailer
-python_requires = >=3.9
+packages = futuremail
+python_requires = >=3.6
 package_dir =
     =.
