Fix installation error

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = futuremail
 url = https://github.com/wheelercj/futuremail
-version = 1.1.0
+version = 1.1.1
 author = Chris Wheeler
 description = Send emails with Python
 long_description = file: README.md
@@ -23,11 +23,12 @@ packages = futuremail
 python_requires = >=3.7
 package_dir =
     =.
-install_requires = requirements.txt
+install_requires = 
+    mistune
+    openpyxl
 
 [options.package_data]
 futuremail =
     =py.typed
     =LICENSE
     =README.md
-    =requirements.txt
