--- a/setup.cfg
+++ b/setup.cfg
@@ -3,6 +3,7 @@ name = futuremail
 url = https://github.com/wheelercj/futuremail
 version = 1.1.1
 author = Chris Wheeler
+author_email = christopher.wheeler.320@my.csun.edu
 description = Send emails with Python
 long_description = file: README.md
 long_description_content_type = text/markdown
